# GraphicsExperiments

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MaterialAndRenderingVariables.md  README.md  ios_build_instructions.txt
projects/: CMakeLists.txt
projects/api/: CMakeLists.txt
projects/api/501_barriers_d3d12/: 501_barriers_d3d12.cpp  CMakeLists.txt
projects/common/: .mtl_renderer.cpp.swp  bitmap.cpp  bitmap.h  camera.cpp  camera.h  config.h  dx_draw_context.cpp  dx_draw_context.h  dx_faux_render.cpp  dx_faux_render.h  dx_renderer.cpp  dx_renderer.h  dx_scene.cpp  dx_scene.h  faux_render.cpp  faux_render.h  line_mesh.cpp  line_mesh.h  mt_renderer.cpp  mt_renderer.h  mt_renderer_utils.h  mt_renderer_utils.mm  mtl_faux_render.cpp  mtl_faux_render.h  mtl_renderer.cpp  mtl_renderer.h  mtl_renderer_utils.h  mtl_renderer_utils.mm  scene.cpp  scene.h  sphereflake.cpp  sphereflake.h  tri_mesh.cpp  tri_mesh.h  vk_faux_render.cpp  vk_faux_render.h  vk_renderer.cpp  vk_renderer.h  window.cpp  window.h  (+1 more)
projects/common/ios/: AAPLView.h  AAPLView.m  AAPLViewController.h  AAPLViewController.m
projects/geometry/: CMakeLists.txt  README.md
projects/geometry/101_color_cube_d3d12/: 101_color_cube_d3d12.cpp  CMakeLists.txt
projects/geometry/101_color_cube_ios/: 101_color_cube_ios.cpp  CMakeLists.txt
projects/geometry/101_color_cube_metal/: 101_color_cube_metal.cpp  CMakeLists.txt
projects/geometry/101_color_cube_metal_ios/: 101_color_cube_metal_ios.cpp  CMakeLists.txt
projects/geometry/101_color_cube_vulkan/: 101_color_cube_vulkan.cpp  CMakeLists.txt
projects/geometry/102_color_cube_vulkan/: 102_color_cube_vulkan.cpp  CMakeLists.txt
projects/geometry/102_cornell_box_d3d12/: 102_cornell_box_d3d12.cpp  CMakeLists.txt
projects/geometry/102_cornell_box_metal/: 102_cornell_box_metal.cpp  CMakeLists.txt
projects/geometry/102_cornell_box_vulkan/: 102_cornell_box_vulkan.cpp  CMakeLists.txt
projects/geometry/103_cone_d3d12/: 103_cone_d3d12.cpp  CMakeLists.txt
projects/geometry/103_cone_metal/: 103_cone_metal.cpp  CMakeLists.txt
projects/geometry/103_cone_vulkan/: 103_cone_vulkan.cpp  CMakeLists.txt
projects/geometry/103_cornell_box_d3d12/: 103_cornell_box_d3d12.cpp  CMakeLists.txt
projects/geometry/103_cornell_box_metal/: 103_cornell_box_metal.cpp  CMakeLists.txt
projects/geometry/104_cornell_box_vulkan/: 104_cornell_box_vulkan.cpp  CMakeLists.txt
projects/geometry/104_debug_tbn_d3d12/: 104_debug_tbn_d3d12.cpp  CMakeLists.txt
projects/geometry/104_debug_tbn_metal/: .104_debug_tbn_metal.cpp.swp  104_debug_tbn_metal.cpp  CMakeLists.txt
projects/geometry/104_debug_tbn_vulkan/: 104_debug_tbn_vulkan.cpp  CMakeLists.txt
projects/geometry/105_cone_d3d12/: 105_cone_d3d12.cpp  CMakeLists.txt
projects/geometry/105_cone_metal/: 105_cone_metal.cpp  CMakeLists.txt
projects/geometry/106_cone_vulkan/: 106_cone_vulkan.cpp  CMakeLists.txt
projects/geometry/107_debug_tbn_d3d12/: 107_debug_tbn_d3d12.cpp  CMakeLists.txt
projects/geometry/107_debug_tbn_metal/: 107_debug_tbn_metal.cpp  CMakeLists.txt
projects/geometry/108_debug_tbn_vulkan/: 108_debug_tbn_vulkan.cpp  CMakeLists.txt
projects/geometry/110_mesh_shader_triangle_d3d12/: 110_mesh_shader_triangle_d3d12.cpp  CMakeLists.txt
projects/geometry/110_mesh_shader_triangle_metal/: 110_mesh_shader_triangle_metal.cpp  CMakeLists.txt
projects/geometry/110_mesh_shader_triangle_metal_ios/: 110_mesh_shader_triangle_metal_ios.cpp  CMakeLists.txt
projects/geometry/110_mesh_shader_triangle_vulkan/: 110_mesh_shader_triangle_vulkan.cpp  CMakeLists.txt
projects/geometry/111_mesh_shader_meshlets_d3d12/: 111_mesh_shader_meshlets_d3d12.cpp  CMakeLists.txt
projects/geometry/111_mesh_shader_meshlets_metal/: 111_mesh_shader_meshlets_metal.cpp  CMakeLists.txt
projects/geometry/111_mesh_shader_meshlets_metal_ios/: 111_mesh_shader_meshlets_metal_ios.cpp  CMakeLists.txt
projects/geometry/111_mesh_shader_meshlets_vulkan/: 111_mesh_shader_meshlets_vulkan.cpp  CMakeLists.txt
projects/geometry/112_mesh_shader_amplification_d3d12/: 112_mesh_shader_amplification_d3d12.cpp  CMakeLists.txt
projects/geometry/112_mesh_shader_amplification_metal/: 112_mesh_shader_amplification_metal.cpp  CMakeLists.txt
projects/geometry/112_mesh_shader_amplification_vulkan/: 112_mesh_shader_amplification_vulkan.cpp  CMakeLists.txt
projects/geometry/113_mesh_shader_instancing_d3d12/: 113_mesh_shader_instancing_d3d12.cpp  CMakeLists.txt
projects/geometry/113_mesh_shader_instancing_metal/: 113_mesh_shader_instancing_metal.cpp  CMakeLists.txt
projects/geometry/113_mesh_shader_instancing_vulkan/: 113_mesh_shader_instancing_vulkan.cpp  CMakeLists.txt
projects/geometry/114_mesh_shader_culling_d3d12/: 114_mesh_shader_culling_d3d12.cpp  CMakeLists.txt
projects/geometry/114_mesh_shader_culling_metal/: 114_mesh_shader_culling_metal.cpp  CMakeLists.txt
projects/geometry/114_mesh_shader_culling_metal_ios/: 114_mesh_shader_culling_metal_ios.cpp  CMakeLists.txt
projects/geometry/114_mesh_shader_culling_vulkan/: 114_mesh_shader_culling_vulkan.cpp  CMakeLists.txt
projects/geometry/115_mesh_shader_lod_d3d12/: 115_mesh_shader_lod_d3d12.cpp  CMakeLists.txt
projects/geometry/115_mesh_shader_lod_metal/: 115_mesh_shader_lod_metal.cpp  CMakeLists.txt
projects/geometry/115_mesh_shader_lod_vulkan/: 115_mesh_shader_lod_vulkan.cpp  CMakeLists.txt
projects/geometry/116_mesh_shader_calc_lod_d3d12/: 116_mesh_shader_calc_lod_d3d12.cpp  CMakeLists.txt
projects/geometry/116_mesh_shader_calc_lod_metal/: .CMakeLists.txt.swn  116_mesh_shader_calc_lod_metal.cpp  CMakeLists.txt
projects/geometry/116_mesh_shader_calc_lod_vulkan/: 116_mesh_shader_calc_lod_vulkan.cpp  CMakeLists.txt
projects/geometry/117_mesh_shader_cull_lod_d3d12/: 117_mesh_shader_cull_lod_d3d12.cpp  CMakeLists.txt
projects/io/: CMakeLists.txt
projects/misc/: CMakeLists.txt
projects/misc/raygen/: raygen.cpp  (+1 more)
projects/pbr/: CMakeLists.txt  README.md
projects/raytracing/: CMakeLists.txt  README.md
projects/rendering/: CMakeLists.txt  README.md
projects/texture/: CMakeLists.txt
(+569 files in other folders)
