cmake_minimum_required(VERSION 3.25)

# ------------------------------------------------------------------------------
# Configure directories
# ------------------------------------------------------------------------------
set(GREX_PROJECTS_COMMON_DIR "${GREX_PROJECTS_DIR}/common")

if (GREX_ENABLE_D3D12)
    add_subdirectory(101_color_cube_d3d12)
    add_subdirectory(102_cornell_box_d3d12)
    add_subdirectory(103_cone_d3d12)
    add_subdirectory(104_debug_tbn_d3d12)
    add_subdirectory(110_mesh_shader_triangle_d3d12)
	add_subdirectory(111_mesh_shader_meshlets_d3d12)
	add_subdirectory(112_mesh_shader_amplification_d3d12)
	add_subdirectory(113_mesh_shader_instancing_d3d12)
	add_subdirectory(114_mesh_shader_culling_d3d12)
	add_subdirectory(115_mesh_shader_lod_d3d12)
	add_subdirectory(116_mesh_shader_calc_lod_d3d12)
	add_subdirectory(117_mesh_shader_cull_lod_d3d12)
    add_subdirectory(118_mesh_shader_vertex_attrs_d3d12)
    add_subdirectory(119_mesh_shader_vertex_bary_d3d12)
endif()

if (GREX_ENABLE_METAL)
	add_subdirectory(101_color_cube_metal)
    add_subdirectory(102_cornell_box_metal)
    add_subdirectory(103_cone_metal)
    add_subdirectory(104_debug_tbn_metal)
    add_subdirectory(110_mesh_shader_triangle_metal)
    add_subdirectory(111_mesh_shader_meshlets_metal)
    add_subdirectory(112_mesh_shader_amplification_metal)
    add_subdirectory(113_mesh_shader_instancing_metal)
    add_subdirectory(114_mesh_shader_culling_metal)
    add_subdirectory(115_mesh_shader_lod_metal)
    add_subdirectory(116_mesh_shader_calc_lod_metal)
    add_subdirectory(117_mesh_shader_cull_lod_metal)
    add_subdirectory(118_mesh_shader_vertex_attrs_metal)
endif()

if (GREX_ENABLE_VULKAN)
    add_subdirectory(101_color_cube_vulkan)
    add_subdirectory(102_cornell_box_vulkan)
    add_subdirectory(103_cone_vulkan)
    add_subdirectory(104_debug_tbn_vulkan)
    add_subdirectory(110_mesh_shader_triangle_vulkan)
    add_subdirectory(111_mesh_shader_meshlets_vulkan)
    add_subdirectory(112_mesh_shader_amplification_vulkan)
    add_subdirectory(113_mesh_shader_instancing_vulkan)
    add_subdirectory(114_mesh_shader_culling_vulkan)
    add_subdirectory(115_mesh_shader_lod_vulkan)
    add_subdirectory(116_mesh_shader_calc_lod_vulkan)
    add_subdirectory(117_mesh_shader_cull_lod_vulkan)
    add_subdirectory(118_mesh_shader_vertex_attrs_vulkan)
    add_subdirectory(119_mesh_shader_vertex_bary_vulkan)
endif()
